# TB

./: README.md  estructuras.h  functions.cpp  functions.h  main.cpp  run_my_team.sh  run_opponent_team.sh  structs.h
tests/: CMakeLists.txt  functions_test.cpp
